[package]
name = "ucore"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>", "Yu Chen <yuchen@tsinghua.edu.cn"]
edition = "2018"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
link_user_program = []
no_bbl = []

[profile.dev]
# MUST >= 1 : Enable RVO to avoid stack overflow
# MUST <= 1 : Avoid double fault at -O2 T_T
opt-level = 1

[profile.release]
debug = true

[dependencies]
log = "0.4"
spin = "0.4.8"
once = "0.3.3"
xmas-elf = "0.6"
bitflags = "1.0"
bit_field = "0.9.0"
volatile = "0.1.0"
linked_list_allocator = "0.6"
lazy_static = { version = "1.0.0", features = ["spin_no_std"] }

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = { path = "../crate/riscv" }
bbl = { path = "../crate/bbl" }

[build-dependencies]
cc = "1.0"
