[package]
name = "riscv"
version = "0.3.0"
repository = "https://github.com/rust-embedded/riscv"
authors = ["David Craven <david@craven.ch>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Low level access to RISCV processors"
keywords = ["riscv", "register", "peripheral"]
license = "ISC"

[dependencies]
bit_field = "0.9.0"

[features]
inline-asm = []
